--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-activityComposeVersion = "1.6.0-alpha01"
-agp = "8.13.1"
-kotlin = "2.0.21"
+activityComposeVersion = "1.11.0"
+agp = "8.6.1"
+kotlin = "1.9.25"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
